# tcount

./: .gitignore  Cargo.toml  LICENSE  QUERIES.md  README.md  build.rs  download_parsers
.tc_queries/: README.md
.tc_queries/go/: _test.scm  keyword.scm
.tc_queries/ruby/: keyword.scm
.tc_queries/rust/: _test.scm  string_literal.scm
.tcount_queries/ruby/: comment.scm  string_literal.scm
builtin_queries/rust/: comment.scm  string_literal.scm
queries/go/: string_literal.scm
queries/rust/: comment.scm
src/: cli.rs  count.rs  error.rs  fs.rs  language.rs  main.rs  output.rs  parser.rs  print.rs  query.rs  tree.rs
test_data/: go1.go  invalid.rs  rust1.rs  unsupported.abc
test_data/cargo_manifest_dir/builtin_queries/go/: false.scm
test_data/cargo_manifest_dir/builtin_queries/rust/: _test.scm  false.scm  string.scm
test_data/xdg_config_home/tc/queries/go/: _test.scm  string.scm
test_data/xdg_config_home/tc/queries/rust/: _test.scm
test_files/: rust.rs
tests/: cli.rs  main.rs  output.rs  query.rs
tests/fixtures/: .ignore  ruby1.rb  rust2.rs  rust3.rs
tests/fixtures/.tc_queries/ruby/: _test.scm
tests/fixtures/cargo_manifest_dir/builtin_queries/go/: string_literal.scm
tests/fixtures/cargo_manifest_dir/builtin_queries/ruby/: _test.scm
tests/fixtures/cargo_manifest_dir/builtin_queries/rust/: keyword.scm
tests/fixtures/foo/: ruby.rb
tests/fixtures/xdg_config_home/tc/queries/rust/: string.scm
tests/fixtures/xdg_config_home/tcount/queries/ruby/: string.scm
tests/fixtures/xdg_config_home/tcount/queries/rust/: _test.scm
tests/utils/: mod.rs
