[package]
name = "tc"
version = "0.1.0"
authors = ["Adam P. Regasz-Rethy <rethy.spud@gmail.com>"]
edition = "2018"

[build-dependencies]
cc="*"

[dependencies]
structopt = "0.3"
regex = "1"
phf = { version = "0.8", features = ["macros"] }
maplit = "1.0.2"
ignore = "0.4.17"
rayon = "1.5.0"
prettytable-rs = "0.8.0"
tree-sitter = "0.19.3"
tree-sitter-bash = "0.19.0"
tree-sitter-bibtex = { git = "https://github.com/latex-lsp/tree-sitter-bibtex", version = "0.0.1" }
tree-sitter-c = { git = "https://github.com/tree-sitter/tree-sitter-c", version = "0.16.0" }
tree-sitter-c-sharp = { git = "https://github.com/tree-sitter/tree-sitter-c-sharp", version = "0.19.0" }
tree-sitter-clojure = { git = "https://github.com/sogaiu/tree-sitter-clojure", version = "0.0.8" }
tree-sitter-cpp = "0.19.0"
tree-sitter-css = { git = "https://github.com/tree-sitter/tree-sitter-css", version = "0.19.0" }
# tree-sitter-dart = { git = "https://github.com/RRethy/tree-sitter-dart", version = "*" }
tree-sitter-elm = "5.3.3"
tree-sitter-erlang = { git = "https://github.com/RRethy/tree-sitter-erlang", version = "*", branch = "main" }
tree-sitter-embedded-template = "0.19.0"
# tree-sitter-fennel = { git = "https://github.com/RRethy/tree-sitter-fennel", version = "0.0.1" }
# tree-sitter-gdscript = { git = "https://github.com/PrestonKnopp/tree-sitter-gdscript", version = "*" }
tree-sitter-go = { git = "https://github.com/tree-sitter/tree-sitter-go", version = "0.19.0" }
# tree-sitter-graphql = { git = "https://github.com/bkegley/tree-sitter-graphql", version = "0.0.1" }
# tree-sitter-haskell = { git = "https://github.com/tree-sitter/tree-sitter-haskell", version = "0.14.0" }
tree-sitter-html = { git = "https://github.com/tree-sitter/tree-sitter-html", version = "0.19.0" }
tree-sitter-java = "0.19.0"
tree-sitter-javascript = "0.19.0"
tree-sitter-json = { git = "https://github.com/tree-sitter/tree-sitter-json", version = "0.19.0" }
tree-sitter-julia = { git = "https://github.com/tree-sitter/tree-sitter-julia", version = "0.19.0" }
# tree-sitter-kotlin = { git = "https://github.com/tormodatt/tree-sitter-kotlin", version = "0.0.1" }
tree-sitter-latex = { git = "https://github.com/latex-lsp/tree-sitter-latex", version = "0.0.1" }
tree-sitter-lua = { git = "https://github.com/nvim-treesitter/tree-sitter-lua", version = "0.0.1" }
tree-sitter-markdown = "0.7.1"
# tree-sitter-nix = { git = "https://github.com/cstrahan/tree-sitter-nix", version = "0.0.1" }
tree-sitter-ocaml = "0.19.0"
# tree-sitter-ocamllex = { git = "https://github.com/atom-ocaml/tree-sitter-ocamllex", version = "*" }
# tree-sitter-php = { git = "https://github.com/tree-sitter/tree-sitter-php", version = "0.19.0" }
tree-sitter-python = "0.19.0"
tree-sitter-query = { git = "https://github.com/nvim-treesitter/tree-sitter-query", version = "0.0.1" }
# tree-sitter-r = { git = "https://github.com/r-lib/tree-sitter-r", version = "*" }
# tree-sitter-rst = { git = "https://github.com/stsewd/tree-sitter-rst", version = "0.0.1" }
tree-sitter-ruby = { git = "https://github.com/tree-sitter/tree-sitter-ruby", version = "0.19.0" }
tree-sitter-rust = "0.19.0"
tree-sitter-scala = { git = "https://github.com/tree-sitter/tree-sitter-scala", version = "0.19.0" }
# tree-sitter-scss = { git = "https://github.com/elianiva/tree-sitter-scss", version = "0.0.1" }
# tree-sitter-supercollider = { git = "https://github.com/madskjeldgaard/tree-sitter-supercollider", version = "*" }
tree-sitter-svelte = "0.8.1"
# tree-sitter-swift = { git = "https://github.com/tree-sitter/tree-sitter-swift", version = "*" }
# tree-sitter-teal = { git = "https://github.com/euclidianAce/tree-sitter-teal", version = "0.0.1" }
# tree-sitter-toml = { git = "https://github.com/ikatyang/tree-sitter-toml", version = "*" }
tree-sitter-typescript = "0.19.0"
# tree-sitter-verilog = { git = "https://github.com/tree-sitter/tree-sitter-verilog", version = "0.0.1" }
# tree-sitter-vue = { git = "https://github.com/ikatyang/tree-sitter-vue", version = "*" }
# tree-sitter-yaml = { git = "https://github.com/ikatyang/tree-sitter-yaml", version = "*" }
# tree-sitter-zig = { git = "https://github.com/Himujjal/tree-sitter-zig", version = "0.0.1" }
