[package]
name = "tcount"
version = "0.1.0"
authors = ["Adam P. Regasz-Rethy <rethy.spud@gmail.com>"]
edition = "2018"

[build-dependencies]
cc="*"

[dev-dependencies]
assert_cmd = "1.0.3"

[dependencies]
structopt = "0.3"
regex = "1"
phf = { version = "0.8", features = ["macros"] }
ignore = "0.4.17"
rayon = "1.5.0"
glob = "0.3.0"
prettytable-rs = "0.8.0"
tree-sitter = "0.20.4"
tree-sitter-loader = "0.20"
tree-sitter-config = "0.19"
